--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,32 @@ h5, em {
   border-radius: 5%;
 }
 
+/* COLOR DE PAGINACIÓN */
+.pagination>li>a {
+  background-color: white;
+  color: #64541f;
+}
+
+.pagination>li>a:focus,
+.pagination>li>a:hover,
+.pagination>li>span:focus,
+.pagination>li>span:hover {
+  color: #5a5a5a;
+  background-color: white;
+  border-color: #ddd;
+}
+
+.pagination>.active>a {
+  color: white;
+  background-color: #f6c13e !Important;
+  border: solid 1px #f6c13e !Important;
+}
+
+.pagination>.active>a:hover {
+  background-color: #fab300 !Important;
+  border: solid 1px #fab300;
+}
+
 /* ------------ ID TAGS ------------ */
 #navbarToggler {
   margin-right: 15px;
