--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,13 @@ h5, em {
   font-size: 1.15rem;
 }
 
+.quien_Soy {
+  margin-top: 20vh;
+  margin-bottom: 35vh;
+  padding-left: 25%;
+  padding-right: 25%;
+}
+
 .carrusel {
   background-color: #ebe6e6;
 }
