--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ h5, em {
   font-size: 1.15rem;
 }
 
-.quien_Soy {
+.quien_soy {
   margin-top: 20vh;
   margin-bottom: 35vh;
   padding-left: 25%;
